test/cases/compile_errors/stage1/obj/wrong_panic_signature_runtime_function.zig
test {}

pub fn panic() void {}


// error
// backend=stage1
// target=native
//
// error: expected type 'fn([]const u8, ?*std.builtin.StackTrace, ?usize) noreturn', found 'fn() void'
